5/5.02/project/manifests/frontend/service-response-linkerd.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-response-db-svc
  namespace: todos-db-namespace
spec:
  ports:
  - port: 2345
    protocol: TCP
    targetPort: 3000
  selector:
    app: todos-frontend-db
  type: ClusterIP
---
